# let-us-Go

./: .coveragerc  .cron.sh  .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  Dockerfile  Dockerfile.deploy  Dockerrun.aws.json  README.md  codecov.yml  create.py  deploy.py  docker-compose-local.yml  docker-compose-traefik.yml  docker-compose.yml  log.sh  pyproject.toml  pytest.ini  requirements.txt  requirements_dev.txt  run.sh  test.sh  traefik.toml  update.py
.config/: Dockerfile.django  gunicorn.py  gunicorn_dev.py  gunicorn_feature.py  gunicorn_master.py  nginx.app.conf  nginx.conf  nginx.front.conf  nginx.settings.conf  nginx_dev.conf  pgdg.list  supervisord.conf
.config/production_dev/: gunicorn.py
.config/production_master/: gunicorn.py
.deploy/: cert.nginx  docker-compose.yml  gunicorn_feature.py  gunicorn_master.py  init.sh  nginx.conf  nginx_dev.conf
.deploy/envs/: develop.env
.dockerfile/: Dockerfile.base  Dockerfile.node  Dockerfile.production
.dockerfile/django/: Dockerfile.app  Dockerfile.django
.dockerfile/nginx/: Dockerfile  nginx.app.conf
.ebextensions/: 01_files.config  healthcheck.config
.github/workflows/: black.yml  ci.yml  dev.yml  feature.yml  master.yml
.requirements/: base.txt  dev.txt  production.txt
.scripts/: create.py  db.py  deploy.py  log.py  only_deploy.py  pre_commit.py  ssl_cert.sh  ssl_check.sh  ssl_renew.sh
app/attends/: apis.py  apps.py  models.py  serializers.py  tests.py  urls.py
app/attends/migrations/: 0001_initial.py  0002_auto_20190625_1836.py  0003_auto_20190625_1837.py  0004_auto_20190627_1416.py  0005_auto_20190627_1417.py  0006_auto_20190627_1442.py
app/config/: apis.py  doc.py  gunicorn.py  jinja2.py  storages.py  tests.py  urls.py  views.py
app/config/settings/: __init__.py  base.py  ci.py  dev.py  production.py  production_dev.py  (+1 more)
app/members/: admin.py  apis.py  apps.py  backends.py  models.py  permissions.py  serializers.py  urls.py  views.py
app/seminars/: admin.py  apps.py  filters.py  models.py  urls.py
app/sponsors/: admin.py  apis.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py
app/templates/: base.html  base.jinja2  index.jinja2
app/utils/: functions.py  models.py
docs/: conf.py  index.rst
docs/pages/: signup.md
(+109 files in other folders)
