[tool.poetry]
name = "letusgo"
version = "0.1.0"
description = ""
authors = ["이한영 <dev@lhy.kr>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "^2.2"
djangorestframework = "^3.10"
django-filter = "^2.2"
django-cleanup = "^4.0"
django-admin-sortable2 = "^0.7.3"
django-aws-secrets-manager = "^0.1.2"
django-extensions = "^2.2"
django-modeladmin-reorder = "^0.3.1"
django-phonenumber-field = "^3.0"
django-storages = "^1.7"
easy-thumbnails = "^2.6"
djangorestframework-api-key = "^1.4"
djangorestframework-camel-case = "^1.1"
django-cors-headers = "^3.1"
django-rest-auth = "^0.9.5"
drf-writable-nested = "^0.5.1"
drf-yasg = "^1.17"
psycopg2-binary = "^2.8"
pytest-cov = "^2.7"
pytest-django = "^3.5"
model_mommy = "^1.6"
jinja2 = "^2.10"
pillow = "^6.2"
supervisor = "^4.0"
gevent = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
